add font ----- change text classes->step 1

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
                         <ul class="navbar-nav ">
                             <li class="nav-item nav-link active dropdown ">
-                                <a class="text-white nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                <a class="text-white nav-link dropdown-toggle" href="index.html" id="navbarDropdownMenuLink"
                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     صفحه اصلی
                                 </a>
                             </li>
                             <li class="nav-item nav-link">
-                                <a class="nav-link dropdown-toggle text-white" href="#" id="avbarDropdownMenuLink"
+                                <a class="nav-link dropdown-toggle text-white" href="services.html" id="avbarDropdownMenuLink"
                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                     خدمات
                                 </a>
@@ -62,11 +62,17 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="nav-item nav-link">
-                                <a class="nav-link text-white" href="#"> ارتباط با ما</a>
+                            <li class="nav-item nav-link active">
+                                <a class="text-white nav-link dropdown-toggle" href="blog.html"
+                                    aria-haspopup="true" aria-expanded="false">
+                                    وبلاگ
+                                </a>
                             </li>
                             <li class="nav-item nav-link">
-                                <a class="nav-link text-white" href="#">درباره ما</a>
+                                <a class="nav-link text-white" href="contactus.html"> ارتباط با ما</a>
+                            </li>
+                            <li class="nav-item nav-link">
+                                <a class="nav-link text-white" href="aboutus.html">درباره ما</a>
                             </li>
                         </ul>
                     </div>
@@ -101,13 +107,13 @@
 
 <section>
     <div class="container">
-        <div class="row section">
+        <div class="row section services-section">
             <div class="col-lg-4 col-sm-12">
                 <div class="background-img">
                     <img class="" src="image/secure.png">
                 </div>
-                <h2 class="text-two">پشتیبانی ایمن</h2>
-                <p class="text-three"> لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                <h3>پشتیبانی ایمن</h3>
+                <p> لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                     گرافیک است. چاپگرها
                     و
                     متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
@@ -118,8 +124,8 @@
                 <div class="background-img">
                     <img class="" src="image/laptop%20(2).png">
                 </div>
-                <h2 class="text-two">تبلیغات و بازاریابی</h2>
-                <p class="text-three">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                <h3>تبلیغات و بازاریابی</h3>
+                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                     گرافیک است. چاپگرها
                     و
                     متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
@@ -130,8 +136,8 @@
                 <div class="background-img">
                     <img class="" src="image/search-engine-optimization%20(2).png">
                 </div>
-                <h2 class="text-two">بهینه سازی seo</h2>
-                <p class="text-three">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
+                <h3>بهینه سازی seo</h3>
+                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                     گرافیک است. چاپگرها
                     و
                     متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
@@ -210,8 +216,8 @@
                                 <i class="section-icon fas fa-headset"></i>
                             </div>
                             <div class="section-box-info">
-                                <h4 class="mb-2 text-seven">پشتیبانی 24 ساعته</h4>
-                                <p class="mb-4 text-eight">
+                                <h4 class="mb-2">پشتیبانی 24 ساعته</h4>
+                                <p class="mb-4">
                                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                                     گرافیک
                                     است.
@@ -225,8 +231,8 @@
                                 <i class="section-icon fas fa-mobile-alt"></i>
                             </div>
                             <div class="section-box-info">
-                                <h4 class="mb-2 text-seven">برنامه های موبایل</h4>
-                                <p class="mb-4 text-eight">
+                                <h4 class="mb-2">برنامه های موبایل</h4>
+                                <p class="mb-4">
                                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                                     گرافیک
                                     است.
@@ -240,8 +246,8 @@
                                 <i class="section-icon fas fa-layer-group"></i>
                             </div>
                             <div class="section-box-info">
-                                <h4 class="mb-2 text-seven">اسلایدر ها</h4>
-                                <p class="mb-4 text-eight">
+                                <h4 class="mb-2">اسلایدر ها</h4>
+                                <p class="mb-4">
                                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                                     گرافیک
                                     است.
@@ -255,8 +261,8 @@
                                 <i class="section-icon fas fa-search"></i>
                             </div>
                             <div class="section-box-info">
-                                <h4 class="mb-2 text-seven">بهینه سازی SEO</h4>
-                                <p class="mb-4 text-eight">
+                                <h4 class="mb-2">بهینه سازی SEO</h4>
+                                <p class="mb-4">
                                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                                     گرافیک
                                     است.
@@ -270,8 +276,8 @@
                                 <i class="section-icon fas fa-border-all"></i>
                             </div>
                             <div class="section-box-info">
-                                <h4 class="mb-2 text-seven">HTML 5</h4>
-                                <p class="mb-4 text-eight">
+                                <h4 class="mb-2">HTML 5</h4>
+                                <p class="mb-4">
                                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                                     گرافیک
                                     است.
@@ -285,8 +291,8 @@
                                 <i class="section-icon fas fa-star"></i>
                             </div>
                             <div class="section-box-info">
-                                <h4 class="mb-2 text-seven">آیکون ها</h4>
-                                <p class="mb-4 text-eight">
+                                <h4 class="mb-2">آیکون ها</h4>
+                                <p class="mb-4">
                                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                                     گرافیک
                                     است.
@@ -300,8 +306,8 @@
                                 <i class="section-icon fas fa-tint"></i>
                             </div>
                             <div class="section-box-info">
-                                <h4 class="mb-2 text-seven">رنگ ها</h4>
-                                <p class="mb-4 text-eight">
+                                <h4 class="mb-2">رنگ ها</h4>
+                                <p class="mb-4">
                                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                                     گرافیک
                                     است.
@@ -315,8 +321,8 @@
                                 <i class="section-icon fas fa-toggle-on"></i>
                             </div>
                             <div class="section-box-info">
-                                <h4 class="mb-2 text-seven">دکمه ها</h4>
-                                <p class="mb-4 text-eight">
+                                <h4 class="mb-2">دکمه ها</h4>
+                                <p class="mb-4">
                                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                                     گرافیک
                                     است.
@@ -330,8 +336,8 @@
                                 <i class="section-icon fas fa-desktop"></i>
                             </div>
                             <div class="section-box-info">
-                                <h4 class="mb-2 text-seven">بهترین راه حل ها</h4>
-                                <p class="mb-4 text-eight">
+                                <h4 class="mb-2">بهترین راه حل ها</h4>
+                                <p class="mb-4">
                                     لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                                     گرافیک
                                     است.
@@ -351,7 +357,7 @@
 </div>
 
 <!-- Start Section Four -->
-<section id="background-section-two">
+<section id="background-section-two ">
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-sm-12 text-lg-left text-center">
