add slider to homepage and fix some bugs

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <!-- start bootstrap-->
     <link rel="stylesheet" href="css/bootstrap-rtl.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <!--start javascript-->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/custom.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
 
 </head>
 <body>
@@ -206,7 +208,7 @@
     </div>
 </div>
 <section id="background-section" class="">
-    <div class="container my-5 py-5">
+    <div class="container py-5">
         <div class="row pt-5 mt-4 pb-4">
             <div class="col">
                 <div class="row pb-4 pt-2 clearfix">
@@ -357,20 +359,20 @@
 </div>
 
 <!-- Start Section Four -->
-<section id="background-section-two ">
+<section class="team-section">
     <div class="container">
-        <div class="row">
+        <div class="row first-item">
             <div class="col-lg-6 col-sm-12 text-lg-left text-center">
                 <img src="image/15657.jpg" class="image-two" alt="">
             </div>
-            <div class="col-lg-6 col-sm-12 section-font order-first order-lg-last ">
-                <h5 class="text-nine">تیم ما</h5>
-                <p class="text-ten">با ما در تماس باشید ما میتوانیم رویاهای شما را عملی کنیم.</p>
+            <div class="col-lg-6 col-sm-12 team-section-first-box order-first order-lg-last ">
+                <h5>تیم ما</h5>
+                <p>با ما در تماس باشید ما میتوانیم رویاهای شما را عملی کنیم.</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-6 col-sm-12 section-font-two text-lg-left">
-                <h5 class="text-nine">با ما همکاری کنید</h5>
+        <div class="row second-item">
+            <div class="col-lg-6 col-sm-12 team-section-second-box section-font-two text-lg-left ">
+                <h5>با ما همکاری کنید</h5>
                 <p class="text-eleven">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان
                     گرافیک است. چاپگرها
                     و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط
@@ -386,32 +388,32 @@
 <!-- Start Section Five -->
 <section>
     <div class="container-fluid">
-        <div class="row under-section">
+        <div class="row feature">
             <div class="col-lg-3 col-sm-12 border-section">
                 <i class="fas fa-tablet-alt icon-section"></i>
-                <h4 class="text-twelve">برنامه های موبایل</h4>
-                <p class="text-thirteen"> لورم ایپسوم متن ساختگی با تولید سادگی
+                <h4>برنامه های موبایل</h4>
+                <p> لورم ایپسوم متن ساختگی با تولید سادگی
                     نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                 </p>
             </div>
             <div class="col-lg-3 col-sm-12 border-section">
                 <i class="fas fa-layer-group icon-section"></i>
-                <h4 class="text-twelve">وبسایت های خلاق</h4>
-                <p class="text-thirteen"> لورم ایپسوم متن ساختگی با تولید سادگی
+                <h4>وبسایت های خلاق</h4>
+                <p> لورم ایپسوم متن ساختگی با تولید سادگی
                     نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                 </p>
             </div>
             <div class="col-lg-3 col-sm-12 border-section">
                 <i class="fas fa-search icon-section"></i>
-                <h4 class="text-twelve">بهترین راه حل ها</h4>
-                <p class="text-thirteen"> لورم ایپسوم متن ساختگی با تولید سادگی
+                <h4>بهترین راه حل ها</h4>
+                <p> لورم ایپسوم متن ساختگی با تولید سادگی
                     نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                 </p>
             </div>
             <div class="col-lg-3 col-sm-12 border-section">
                 <i class="fas fa-desktop icon-section"></i>
-                <h4 class="text-twelve">بهینه سازی SEO</h4>
-                <p class="text-thirteen"> لورم ایپسوم متن ساختگی با تولید سادگی
+                <h4>بهینه سازی SEO</h4>
+                <p> لورم ایپسوم متن ساختگی با تولید سادگی
                     نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
                 </p>
             </div>
@@ -423,23 +425,59 @@
 <section>
     <div class="container ">
         <div class="row">
-            <div class="col-2 slider-button-next">
-                <i class="fas fa-angle-right"></i>
-            </div>
-            <div class="col-8 text-center slider-text">
-                <img src="image/11986.jpg" class="img-slider" alt="">
-                <p class="text-fourteen">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
-                    طراحان
-                    گرافیک است. چاپگرها و
-                    متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
-                </p>
-                <h5 class="text-fifteen">لورم ایپسوم متن ساختگی</h5>
-            </div>
-            <div class="col-2 slider-button-prev">
-                <i class="fas fa-angle-left"></i>
-            </div>
-        </div>
+<!--            <div class="col-2 slider-button-next">-->
+<!--                <i class="fas fa-angle-right"></i>-->
+<!--            </div>-->
+<!--            <div class="col-8 text-center slider-text">-->
+<!--                <img src="image/11986.jpg" class="img-slider" alt="">-->
+<!--                <p class="text-fourteen">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از-->
+<!--                    طراحان-->
+<!--                    گرافیک است. چاپگرها و-->
+<!--                    متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و-->
+<!--                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.-->
+<!--                </p>-->
+<!--                <h5 class="text-fifteen">لورم ایپسوم متن ساختگی</h5>-->
+<!--            </div>-->
+<!--            <div class="col-2 slider-button-prev">-->
+<!--                <i class="fas fa-angle-left"></i>-->
+<!--            </div>-->
+            <!-- Slider main container -->
+            <div class="swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="col-8 text-center slider-text">
+
+                                      <img src="image/11986.jpg" class="img-slider" alt="">
+                                        <p class="text-fourteen">
+                                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
+                                           طراحان
+                                           گرافیک است. چاپگرها و
+                                         متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                                            کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+                                       </p>
+                                        <h5 class="text-fifteen">رضا حسنی</h5>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="col-8 text-center slider-text">
+
+                            <img src="image/11986.jpg" class="img-slider" alt="">
+                            <p class="text-fourteen">
+                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
+                                طراحان
+                                گرافیک است. چاپگرها و
+                                متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
+                                کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+                            </p>
+                            <h5 class="text-fifteen">امیرمحمد میرزائی</h5>
+                        </div>
+                    </div>
+
+                </div>
+                <!-- Add Arrows -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+            </div>        </div>
     </div>
 </section>
 
@@ -477,5 +515,13 @@
 </footer>
 <!-- Font Awesome -->
 <script src="js/all.min.js"></script>
+<script>
+    var swiper = new Swiper('.swiper-container', {
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+    });
+</script>
 </body>
 </html>
