--- a/index.html
+++ b/index.html
@@ -425,22 +425,6 @@
 <section>
     <div class="container ">
         <div class="row">
-<!--            <div class="col-2 slider-button-next">-->
-<!--                <i class="fas fa-angle-right"></i>-->
-<!--            </div>-->
-<!--            <div class="col-8 text-center slider-text">-->
-<!--                <img src="image/11986.jpg" class="img-slider" alt="">-->
-<!--                <p class="text-fourteen">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از-->
-<!--                    طراحان-->
-<!--                    گرافیک است. چاپگرها و-->
-<!--                    متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و-->
-<!--                    کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.-->
-<!--                </p>-->
-<!--                <h5 class="text-fifteen">لورم ایپسوم متن ساختگی</h5>-->
-<!--            </div>-->
-<!--            <div class="col-2 slider-button-prev">-->
-<!--                <i class="fas fa-angle-left"></i>-->
-<!--            </div>-->
             <!-- Slider main container -->
             <div class="swiper-container">
                 <div class="swiper-wrapper">
@@ -448,28 +432,24 @@
                         <div class="col-8 text-center slider-text">
 
                                       <img src="image/11986.jpg" class="img-slider" alt="">
-                                        <p class="text-fourteen">
+                                        <p>
                                             لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
                                            طراحان
-                                           گرافیک است. چاپگرها و
-                                         متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-                                            کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+                                           گرافیک است.
                                        </p>
-                                        <h5 class="text-fifteen">رضا حسنی</h5>
+                                        <h5>رضا حسنی</h5>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="col-8 text-center slider-text">
 
                             <img src="image/11986.jpg" class="img-slider" alt="">
-                            <p class="text-fourteen">
+                            <p>
                                 لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از
                                 طراحان
-                                گرافیک است. چاپگرها و
-                                متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-                                کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد.
+                                گرافیک است.
                             </p>
-                            <h5 class="text-fifteen">امیرمحمد میرزائی</h5>
+                            <h5>امیرمحمد میرزائی</h5>
                         </div>
                     </div>
 
